# turbo-doodle

./: .env.template  Dockerfile  LICENSE  README.md  debug.py  docker-compose.yml  pyproject.toml
doodle/: __init__.py  config.py  db.py  main.py
doodle/models/: clients.py  reports.py  techs.py
doodle/routers/: client.py  tech.py
scripts/: format.sh  setup_dev.sh  start.sh  update_dev.sh
tests/: conftest.py  test_tech.py
