[project]
name = "doodle"
authors = [{ name = "Arthur Harduim", email = "harduim.arthur@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["Flask~=3.0"]


[project.urls]
Home = "https://github.com/Harduim/turbo-doodle"


[project.optional-dependencies]
dev = ["black", "isort"]


[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
