[project]
name = "doodle"
authors = [{ name = "Arthur Harduim", email = "harduim.arthur@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
  "Flask~=3.0",
  "python-dotenv~=1.0",
  "pydantic~=2.4",
  "gunicorn~=21.2",
]


[project.urls]
Home = "https://github.com/Harduim/turbo-doodle"


[project.optional-dependencies]
dev = ["black", "isort", "pytest"]


[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
